dynamically_typed_tests/invalid/print/printTypeErr01.wacc
# type mismatch: int <- char

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  x = 4 ;
  y = 'a' ;
  println x + y
end
